fixed links and did initial BoW

--- a/HW1/HW1.ipynb
+++ b/HW1/HW1.ipynb
@@ -771,8 +771,7 @@
   "metadata": {
     "colab": {
       "name": "HW1",
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
