--- a/HW2/HW_2.ipynb
+++ b/HW2/HW_2.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/rqchao/INFO159/blob/main/HW2/HW_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -66,16 +66,16 @@
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
-        "id": "s7DVjxeq_-OF",
-        "outputId": "86a35862-20b4-4f95-988d-bfa29597cd47",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "s7DVjxeq_-OF",
+        "outputId": "86a35862-20b4-4f95-988d-bfa29597cd47"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/usr/lib/python3.8/runpy.py:127: RuntimeWarning: 'nltk.downloader' found in sys.modules after import of package 'nltk', but prior to execution of 'nltk.downloader'; this may result in unpredictable behaviour\n",
             "  warn(RuntimeWarning(msg))\n",
@@ -101,16 +101,16 @@
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
-        "id": "qUdEHON5lybF",
-        "outputId": "74ff9358-683c-4165-ba0c-ecc32648f85e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qUdEHON5lybF",
+        "outputId": "74ff9358-683c-4165-ba0c-ecc32648f85e"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "1.13.1+cu116\n"
           ]
@@ -137,16 +137,16 @@
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
-        "id": "mRy4VWrvkCP6",
-        "outputId": "0593d76b-51f8-47fd-f005-ed4a4878bcaf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mRy4VWrvkCP6",
+        "outputId": "0593d76b-51f8-47fd-f005-ed4a4878bcaf"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Running on cuda\n"
           ]
@@ -181,16 +181,16 @@
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {
-        "id": "l_ZZQsGwH5vj",
-        "outputId": "ccc41774-b85a-49f2-ac52-78aa13bc39ad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "l_ZZQsGwH5vj",
+        "outputId": "ccc41774-b85a-49f2-ac52-78aa13bc39ad"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "--2023-02-07 04:00:09--  https://raw.githubusercontent.com/dbamman/nlp23/main/HW2/train.txt\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
@@ -388,16 +388,16 @@
       "cell_type": "code",
       "execution_count": 11,
       "metadata": {
-        "id": "-FeYYf7-c01Z",
-        "outputId": "76e075ab-bdbe-4feb-dd38-2e8ef5dd2ff2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-FeYYf7-c01Z",
+        "outputId": "76e075ab-bdbe-4feb-dd38-2e8ef5dd2ff2"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "<ipython-input-8-f5d72ba51508>:41: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at ../torch/csrc/utils/tensor_new.cpp:230.)\n",
             "  batches_x.append(xType(x[i:i+batch_size]))\n"
@@ -493,16 +493,16 @@
       "cell_type": "code",
       "execution_count": 13,
       "metadata": {
-        "id": "Duzn0vCrdR5X",
-        "outputId": "6d5d659f-4362-4d16-eb09-0eb9d65f5ca4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Duzn0vCrdR5X",
+        "outputId": "6d5d659f-4362-4d16-eb09-0eb9d65f5ca4"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 0, dev accuracy: 0.648\n",
             "Epoch 5, dev accuracy: 0.681\n",
@@ -623,16 +623,16 @@
       "cell_type": "code",
       "execution_count": 15,
       "metadata": {
-        "id": "_sK7bP2wR96j",
-        "outputId": "16244dbb-72ee-4506-c70c-91988c3d3fa0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_sK7bP2wR96j",
+        "outputId": "16244dbb-72ee-4506-c70c-91988c3d3fa0"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 0, dev accuracy: 0.660\n",
             "Epoch 5, dev accuracy: 0.739\n",
@@ -771,16 +771,16 @@
       "cell_type": "code",
       "execution_count": 16,
       "metadata": {
-        "id": "CEFF55BQla6d",
-        "outputId": "c6be7f64-e3f2-4033-9806-49afbbdd290e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CEFF55BQla6d",
+        "outputId": "c6be7f64-e3f2-4033-9806-49afbbdd290e"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "(2, 37) (2, 37) (2, 2)\n"
           ]
@@ -810,16 +810,16 @@
       "cell_type": "code",
       "execution_count": 17,
       "metadata": {
-        "id": "yXFA1SJKmI_w",
-        "outputId": "6e3f2c7f-2352-4435-fb50-301db00fd0d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yXFA1SJKmI_w",
+        "outputId": "6e3f2c7f-2352-4435-fb50-301db00fd0d2"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "(5, 2) (5, 37)\n"
           ]
@@ -845,16 +845,16 @@
       "cell_type": "code",
       "execution_count": 18,
       "metadata": {
-        "id": "-wezc38AmUQa",
-        "outputId": "3f1b2950-677f-441b-b24a-c7c6f4c50f68",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-wezc38AmUQa",
+        "outputId": "3f1b2950-677f-441b-b24a-c7c6f4c50f68"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "**test_mamtrix**:\n",
             " [[0.75774054 0.91338009 0.99072117 0.26826807 0.31164955]\n",
@@ -939,16 +939,16 @@
       "cell_type": "code",
       "execution_count": 19,
       "metadata": {
-        "id": "KJxi10sRm6cA",
-        "outputId": "b75a7c2e-1787-4608-fe13-a179f694e59a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KJxi10sRm6cA",
+        "outputId": "b75a7c2e-1787-4608-fe13-a179f694e59a"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "(2, 37) (2, 37) (2, 2)\n"
           ]
@@ -981,7 +981,10 @@
         "    Wv=np.random.rand(input_embedding_size, input_embedding_size)\n",
         "\n",
         "    # BEGIN SOLUTION\n",
-        "    softmax((Wq @ Wk.T)/sqrt(query_key_size)) @ Wv\n",
+        "    Q = input @ Wq\n",
+        "    K = input @ Wk\n",
+        "    V = input @ Wv\n",
+        "    softmax((Q @ K.T)/sqrt(query_key_size)) @ V\n",
         "    # END SOLUTION\n",
         "    assert input.shape == output.shape\n",
         "    return output"
@@ -1093,9 +1096,9 @@
         "    \n",
         "    def forward(self, input):\n",
         "      Q = self.Wq(input)\n",
-        "      W = self.Wk(input)\n",
+        "      K = self.Wk(input)\n",
         "      V = self.Wv(input)\n",
-        "      return self.softmax(Q @ W.T / sqrt(self.query_key_size)) @ V\n",
+        "      return self.softmax(Q @ K.T / sqrt(self.query_key_size)) @ V\n",
         "    # END SOLUTION\n",
         "\n",
         "class AttentionClassifier(nn.Module):\n",
@@ -1174,16 +1177,16 @@
       "cell_type": "code",
       "execution_count": 34,
       "metadata": {
-        "id": "3_UJSBJ86j5f",
-        "outputId": "e9211165-4343-42a9-8042-74f2341c1c56",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3_UJSBJ86j5f",
+        "outputId": "e9211165-4343-42a9-8042-74f2341c1c56"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 0, dev accuracy: 0.784\n",
             "Epoch 1, dev accuracy: 0.793\n",
@@ -1248,14 +1251,16 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
+      "include_colab_link": true,
       "name": "HW2",
       "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
+    "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "nlp",
       "language": "python",
       "name": "python3"
     },
@@ -1269,10 +1274,13 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.8"
+      "version": "3.10.8"
     },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
+    "vscode": {
+      "interpreter": {
+        "hash": "b0ac904a1c22f75428fe267255c2a419166f9af52fbfab2007fe5f104e18bdf1"
+      }
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
