--- a/HW4/HW4.ipynb
+++ b/HW4/HW4.ipynb
@@ -6,7 +6,7 @@
         "id": "40FAFBKNp5FM"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/dbamman/nlp23/blob/main/HW4/HW4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/rqchao/INFO159/blob/main/HW4/HW4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "fME7S_whjKcT"
       },
@@ -85,12 +85,26 @@
         "\n",
         "    # BEGIN SOLUTION\n",
         "    def reachable(i, head, heads): # populate this (Part 3)\n",
-        "        pass\n",
+        "        while head != 0:\n",
+        "            if head == i:\n",
+        "                return True\n",
+        "            elif head < i:\n",
+        "                i = head\n",
+        "                head = heads[head]\n",
+        "            else:\n",
+        "                i, head = head, i\n",
+        "        return False\n",
         "    \n",
         "    heads = {} # populate this (Part 1)\n",
+        "    for token in tokens:\n",
+        "        idd, tok, pos, head, lab = token\n",
+        "        heads[idd] = head\n",
         "\n",
-        "    for dep_to_check in heads: # populate this (Part 2)\n",
-        "        \n",
+        "    for j, dep_to_check in enumerate(heads): # populate this (Part 2)\n",
+        "        if head == 0:\n",
+        "            continue  # root node\n",
+        "        left = min(j, head)\n",
+        "        right = max(j, head)\n",
         "        for i in range(left + 1, right):\n",
         "            if not reachable(i, head, heads):\n",
         "              return False\n",
