--- a/HW2/HW_2.ipynb
+++ b/HW2/HW_2.ipynb
@@ -984,7 +984,7 @@
         "    Q = input @ Wq\n",
         "    K = input @ Wk\n",
         "    V = input @ Wv\n",
-        "    softmax((Q @ K.T)/sqrt(query_key_size)) @ V\n",
+        "    output = softmax((Q @ K.T)/sqrt(query_key_size)) @ V\n",
         "    # END SOLUTION\n",
         "    assert input.shape == output.shape\n",
         "    return output"
