--- a/HW4/HW4.ipynb
+++ b/HW4/HW4.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/rqchao/INFO159/blob/main/HW4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "40FAFBKNp5FM"
       },
       "source": [
@@ -84,30 +94,25 @@
         "def is_projective(tokens):\n",
         "\n",
         "    # BEGIN SOLUTION\n",
-        "    def reachable(i, head, heads): # populate this (Part 3)\n",
-        "        while head != 0:\n",
-        "            if head == i:\n",
-        "                return True\n",
-        "            elif head < i:\n",
-        "                i = head\n",
-        "                head = heads[head]\n",
-        "            else:\n",
-        "                i, head = head, i\n",
-        "        return False\n",
+        "    def reachable(i, head, heads):\n",
+        "        if i == head:\n",
+        "            return True\n",
+        "        elif i not in heads:\n",
+        "            return False\n",
+        "        else:\n",
+        "            return reachable(heads[i], head, heads)\n",
         "    \n",
         "    heads = {} # populate this (Part 1)\n",
-        "    for token in tokens:\n",
-        "        idd, tok, pos, head, lab = token\n",
+        "    for idd, tok, pos, head, lab in tokens:\n",
         "        heads[idd] = head\n",
         "\n",
-        "    for j, dep_to_check in enumerate(heads): # populate this (Part 2)\n",
-        "        if head == 0:\n",
-        "            continue  # root node\n",
-        "        left = min(j, head)\n",
-        "        right = max(j, head)\n",
+        "    for dep_to_check in heads: # populate this (Part 2)\n",
+        "        head = heads[dep_to_check]\n",
+        "        left = min(head, dep_to_check)\n",
+        "        right = max(head, dep_to_check)\n",
         "        for i in range(left + 1, right):\n",
-        "            if not reachable(i, head, heads):\n",
-        "              return False\n",
+        "          if not reachable(i, head, heads):\n",
+        "            return False\n",
         "            \n",
         "    return True\n",
         "    # END SOLUTION"
@@ -124,11 +129,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "ccPr3IevJFd8"
+        "id": "ccPr3IevJFd8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c07a3f8b-592a-45dc-c945-f9c36463006f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "You have cleared the sanity check for is_projective()!\n"
+          ]
+        }
+      ],
       "source": [
         "\"\"\"\n",
         "objective: Sanity check the is_projective() function\n",
@@ -177,7 +194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "CFzJksVqjKcX"
       },
@@ -213,8 +230,10 @@
         "    configurations.append((list(wbuffer), list(stack), list(arcs)))\n",
         "\n",
         "    # update gold_transitions (Part 2)\n",
+        "    gold_transitions.append('SHIFT')\n",
         "\n",
         "    # remove word from front of buffer and push it onto stack (Part 3)\n",
+        "    stack.append(wbuffer.pop())\n",
         "    \n",
         "    # END SOLUTION"
       ]
@@ -230,11 +249,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "Nt_K4zkCJRcV"
+        "id": "Nt_K4zkCJRcV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5b02ccca-4f93-4f2f-cd5b-50d492ecd94a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "You cleared the sanity check for perform_shift().\n"
+          ]
+        }
+      ],
       "source": [
         "\"\"\"\n",
         "objective: Sanity check the perform_shift() function\n",
@@ -284,7 +315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "NW9_Y2fyjKcc"
       },
@@ -316,18 +347,30 @@
         "\n",
         "def perform_arc(direction, dep_label, wbuffer, stack, arcs, configurations, gold_transitions):\n",
         "\n",
-        "    # BEGIN SOLUTION\n",
         "    # update configurations (Part 1)\n",
-        "    \n",
+        "    configurations.append((list(wbuffer), list(stack), list(arcs)))\n",
+        "\n",
         "    # update transitions (Part 2)\n",
+        "    gold_transitions.append(f\"{direction}ARC_{dep_label}\")\n",
         "\n",
         "    # setup head and child items (Part 3)\n",
+        "    if direction == \"LEFT\":\n",
+        "        head = stack[-1]\n",
+        "        child = stack[-2]\n",
+        "    elif direction == \"RIGHT\":\n",
+        "        head = stack[-2]\n",
+        "        child = stack[-1]\n",
         "\n",
         "    # update arcs (Part 4)\n",
+        "    arcs.append((dep_label, head, child))\n",
         "\n",
         "    # update stack (Part 5)\n",
-        "    pass\n",
-        "    # END SOLUTION"
+        "    if direction == \"LEFT\":\n",
+        "        stack.pop(-2)\n",
+        "    elif direction == \"RIGHT\":\n",
+        "        stack.pop()\n",
+        "\n",
+        "    return wbuffer, stack, arcs, configurations, gold_transitions\n"
       ]
     },
     {
@@ -341,11 +384,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "YbvwB7kkJV95"
+        "id": "YbvwB7kkJV95",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "112f8455-908d-4aa5-c2d9-8c770b73cfd5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "You cleared the sanity check for perform_arc()!\n"
+          ]
+        }
+      ],
       "source": [
         "\"\"\"\n",
         "Sanity check for the function perform_arc()\n",
@@ -395,7 +450,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "9HeTVArDjKci"
       },
@@ -470,8 +525,18 @@
         "            # update dep_arcs\n",
         "            dep_arcs[stack2] = 1\n",
         "\n",
-        "        # BEGIN SOLUTION\n",
-        "  \n",
+        "        # BEGIN SOLUTION  \n",
+        "        # check against conditions for right arc operation\n",
+        "        elif stack2 in deps and (stack2, stack1) in deps[stack2]:\n",
+        "            # check if all the dependents of s1 have been assigned\n",
+        "            if stack1 not in deps or all([dep[1] in dep_arcs for dep in deps[stack1].keys()]):\n",
+        "                # perform right arc\n",
+        "                perform_arc(\"RIGHT\", deps[stack2][(stack2, stack1)], wbuffer, stack, arcs, configurations, gold_transitions)\n",
+        "                # update dep_arcs\n",
+        "                dep_arcs[stack1] = 1\n",
+        "            else:\n",
+        "                # perform shift\n",
+        "                perform_shift(wbuffer, stack, arcs, configurations, gold_transitions)\n",
         "        # END SOLUTION\n",
         "\n",
         "        # perform shift\n",
@@ -492,19 +557,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
-        "id": "fYpLgArZJb1X"
+        "id": "fYpLgArZJb1X",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7a4e7e10-3472-4c1f-c1d0-d626bf303446"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "You cleared the sanity check for tree_to_actions()!\n"
+          ]
+        }
+      ],
       "source": [
+        "\n",
         "\"\"\"\n",
         "objective: sanity check the tree_to_actions() function\n",
         "\"\"\"\n",
         "def sanity_check_tree_to_actions():\n",
         "\n",
         "    # Setup for invoking tree_to_actions \n",
-        "    wbuffer = [9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+        "    wbuffer = [9, 8, 7, 6, 5, 4, 3, 2, 1] \n",
         "    stack = [0]\n",
         "    arcs = []\n",
         "    deps = {5: {(5, 9): 'punct', (5, 8): 'obl', (5, 4): 'advmod', (5, 3): 'aux:pass', (5, 2): 'nsubj:pass'},\n",
@@ -554,7 +632,7 @@
         "id": "TOade2BW9P7g"
       },
       "source": [
-        "**type q3 response here**"
+        "Phrase-structure grammars are based on a hierarchical structure of phrases. Dependency grammars, on the other hand, are based on directed dependencies between words, represented by a labeled arc. As such, dependency grammars do not recognize constituents. Phase structure grammars also typically have more complex rules and categories, whereare relationship between individual words is easier to classify. Typically dependency structures have less nodes, as they abstract away linear order. This also gives dependency grammars wider scope, as they can handle a broader range of phenomena, including non-projective dependencies, long-distance dependencies, and discontinuous constituents, which can be challenging for phrase-structure grammars. We've seen that consequentially dependency parsing tends to be faster and more accurate than constituency parsing, due to the simpler nature of the dependency structure.\n"
       ]
     },
     {
@@ -1267,9 +1345,9 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "name": "HW4",
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "gpuClass": "standard",
     "kernelspec": {
